# FileKVStore

./: BuildMe  CMakeLists.txt  README.md
include/: Cache.h  Cleanable.h  DataGenerator.h  FileStore.h  Hash.h  IndexStore.h  JenkinsHash.h  Status.h  Types.h  Util.h
src/: BPlusTreeIndexStore.cpp  Cache.cpp  Cleanable.cpp  FileStore.cpp  HashIndexStore.cpp  IndexStore.cpp  JenkinsHash.cpp  Main.cpp  Makefile  Util.cpp
test/: CacheTest.cpp  FileStoreTest.cpp  Makefile
tool/: DataGenerator.cpp  Makefile  buildTool.sh  generateDataFile.cpp
